kubernetes/apps/media/mediabox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mediabox
spec:
  externalName: ${SECRET_MEDIABOX_IP}
  ports:
    - name: sonarr
      port: 8989
      protocol: TCP
      targetPort: 8989
    - name: radarr
      port: 7878
      protocol: TCP
      targetPort: 7878
    - name: prowlarr
      port: 9696
      protocol: TCP
      targetPort: 9696
    - name: sabnzbd
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: gaps
      port: 8484
      protocol: TCP
      targetPort: 8484
    - name: bazarr
      port: 6767
      protocol: TCP
      targetPort: 6767
    - name: notifiarr
      port: 5454
      protocol: TCP
      targetPort: 5454
    - name: readarr
      port: 8787
      protocol: TCP
      targetPort: 8787
    - name: lldap
      port: 17170
      protocol: TCP
      targetPort: 17170
  sessionAffinity: None
  type: ExternalName
