kubernetes/apps/media/mediabox/app/tautulli-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-exporter
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli-exporter
    app.kubernetes.io/instance: tautulli-exporter
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: tautulli-exporter
    app.kubernetes.io/instance: tautulli-exporter
  ports:
    - name: monitoring
      port: 9487
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tautulli-exporter
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli-exporter
    app.kubernetes.io/instance: tautulli-exporter
  annotations:
    fluxcd.io/ignore: 'false'
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli-exporter
      app.kubernetes.io/instance: tautulli-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli-exporter
        app.kubernetes.io/instance: tautulli-exporter
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: monitoring
    spec:
      containers:
        - name: tautulli-exporter
          image: registry.eighty-three.me/tuxpeople/tautulli-exporter:0.1.0
          imagePullPolicy: Always
          ports:
            - name: monitoring
              containerPort: 9487
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
