kubernetes/apps/media/mediabox/app/gaps-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaps
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-auth@kubernetescrd
    hajimari.io/icon: "tag-search"
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - gaps.${SECRET_DOMAIN}
  rules:
    - host: gaps.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaps
                port:
                  number: 8484
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: gaps
spec:
  ports:
    - name: gaps
      port: 8484
      protocol: TCP
      targetPort: 8484
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: gaps-extern
  labels:
    kubernetes.io/service-name: gaps
addressType: IPv4
ports:
  - port: 8484
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.6
    conditions:
      ready: true
