kubernetes/apps/media/mediabox/app/notifiarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifiarr
  annotations:
    hajimari.io/enable: "false"
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - notifiarr.${SECRET_DOMAIN}
  rules:
    - host: notifiarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediabox
                port:
                  name: notifiarr
