kubernetes/apps/media/mediabox/app/podsync-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podsync
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: ${SECRET_DNS_TARGET}
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: headphones
spec:
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - podsync.${SECRET_DOMAIN}
  rules:
    - host: podsync.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediabox
                port:
                  name: podsync
