kubernetes/apps/media/mediabox/app/sabnzbd-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-auth@kubernetescrd
    hajimari.io/icon: cloud-download
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - sabnzbd.${SECRET_DOMAIN}
  rules:
    - host: sabnzbd.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
    - name: sabnzbd
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sabnzbd-extern
  labels:
    kubernetes.io/service-name: sabnzbd
addressType: IPv4
ports:
  - port: 8080
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.3
    conditions:
      ready: true
