kubernetes/apps/media/mediabox/app/stats-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stats
  annotations:
    kubernetes.io/ingress.class: nginx

    hajimari.io/enable: "true"
    hajimari.io/icon: plex
spec:
  tls:
    - secretName: ${SECRET_DOMAIN_INTERNAL//./-}-tls
      hosts:
        - stats.${SECRET_DOMAIN_INTERNAL}
  rules:
    - host: stats.${SECRET_DOMAIN_INTERNAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediabox
                port:
                  name: stats
