kubernetes/apps/media/mediabox/app/tautulli-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  annotations:
    kubernetes.io/ingress.class: nginx

    hajimari.io/enable: "true"
    hajimari.io/icon: chart-bar
spec:
  tls:
    - secretName: ${SECRET_DOMAIN//./-}-tls
      hosts:
        - tautulli.${SECRET_DOMAIN}
  rules:
    - host: tautulli.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediabox
                port:
                  name: tautulli
